--- a/index.html
+++ b/index.html
@@ -11,10 +11,160 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- fontawesome link  -->
+    <script
+      src="https://kit.fontawesome.com/0c1139f033.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+    <!-- customize tailwind  -->
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+              primary_color: "#ABEF5F",
+              bold_opacity_color: "#737373",
+              lite_opacity_color: "#494949",
+            },
+            fontFamily: {
+              manrope: ["Manrope", "sans-serif"],
+            },
+          },
+        },
+      };
+    </script>
   </head>
-  <body>
-    <header>
-      <nav></nav>
+  <body class="bg-gray-50">
+    <header class="container mx-auto">
+      <!-- navigation bar start  -->
+      <nav>
+        <div class="navbar">
+          <div class="navbar-start">
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h8m-8 6h16"
+                  />
+                </svg>
+              </div>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
+              >
+                 <li class="text-base cursor-pointer text-bold_opacity_color">
+                Home
+              </li>
+                 <li class="text-base cursor-pointer text-bold_opacity_color">
+                Services
+              </li>
+                 <li class="text-base cursor-pointer text-bold_opacity_color">
+                Portfolio
+              </li>
+              </li>
+                 <li class="text-base cursor-pointer text-bold_opacity_color">
+                Blogs
+              </li>
+              </li>
+                 <li class="text-base cursor-pointer text-bold_opacity_color">
+                Contact Us
+              </li>
+              </ul>
+            </div>
+            <!-- logo arrow svg -->
+            <div class="rounded-full bg-primary_color p-2 cursor-pointer">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"
+                />
+              </svg>
+            </div>
+            <!-- logo/title  -->
+            <h3
+              class="font-manrope text-3xl font-extrabold ms-2 cursor-pointer"
+            >
+              Aura Interiors
+            </h3>
+          </div>
+          <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-horizontal px-1 space-x-9">
+              <li
+                class="text-base cursor-pointer text-black-600 font-extrabold"
+              >
+                Home
+              </li>
+              <li class="text-base cursor-pointer text-bold_opacity_color">
+                Services
+              </li>
+              <li class="text-base cursor-pointer text-bold_opacity_color">
+                Portfolio
+              </li>
+              <li class="text-base cursor-pointer text-bold_opacity_color">
+                Blogs
+              </li>
+              <li class="text-base cursor-pointer text-bold_opacity_color">
+                Contact Us
+              </li>
+            </ul>
+          </div>
+          <div class="navbar-end space-x-4">
+            <i
+              class="bg-white text-2xl text-bold_opacity_color rounded-full border-slate-200 border p-2 fa-solid fa-magnifying-glass"
+            ></i>
+            <i
+              class="bg-white text-2xl text-bold_opacity_color rounded-full border-slate-200 border p-2 fa-solid fa-cart-shopping"
+            ></i>
+            <div
+              class="bg-primary_color flex items-center space-x-2 px-5 py-3 rounded-[32px] cursor-pointer"
+            >
+              <a class="text-black text-lg font-extrabold">Book Consult</a>
+              <div class="p-2 bg-black rounded-full">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6 text-white"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"
+                  />
+                </svg>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <!-- navigation bar end  -->
     </header>
     <main></main>
     <footer></footer>
