--- a/index.html
+++ b/index.html
@@ -207,7 +207,51 @@
       </section>
       <!-- header section end   -->
     </header>
-    <main></main>
+    <main>
+      <!-- what we design  -->
+      <section class="container mx-auto my-24"></section>
+      <!-- design count  -->
+      <section
+        class="container mx-auto bg-white p-8 grid grid-cols-1 md:grid-cols-4 gap-x-6 rounded-3xl"
+      >
+        <!-- client review  -->
+        <div class="p-6 flex flex-col items-center space-y-3">
+          <i class="fa-regular fa-message text-2xl text-lite_opacity_color"></i>
+          <h3 class="text-4xl font-bold text-lite_opacity_color">235+</h3>
+          <p class="text-base font-medium text-lite_opacity_color">
+            Happy Client Review
+          </p>
+        </div>
+        <!-- work department  -->
+        <div class="p-6 flex flex-col items-center space-y-3">
+          <i
+            class="fa-regular fa-building text-2xl text-lite_opacity_color"
+          ></i>
+          <h3 class="text-4xl font-bold text-lite_opacity_color">50+</h3>
+          <p class="text-base font-medium text-lite_opacity_color">
+            Happy Client Review
+          </p>
+        </div>
+        <!-- Happy client  -->
+        <div class="p-6 flex flex-col items-center space-y-3">
+          <i
+            class="fa-solid fa-users-viewfinder text-2xl text-lite_opacity_color"
+          ></i>
+          <h3 class="text-4xl font-bold text-lite_opacity_color">30K+</h3>
+          <p class="text-base font-medium text-lite_opacity_color">
+            Happy Client Review
+          </p>
+        </div>
+        <!-- staff members  -->
+        <div class="p-6 flex flex-col items-center space-y-3">
+          <i class="fa-solid fa-users text-2xl text-lite_opacity_color"></i>
+          <h3 class="text-4xl font-bold text-lite_opacity_color">307+</h3>
+          <p class="text-base font-medium text-lite_opacity_color">
+            Staff Members
+          </p>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
