about section complete

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </figure>
         <div class="space-y-6 flex flex-col items-center">
           <h1
-            class="text-3xl md:text-6xl text-center font-extrabold wi-full md:w-3/4"
+            class="text-3xl md:text-6xl text-center font-extrabold wi-full md:w-3/4 text-black"
           >
             A barn house of this design has a striking appearance
           </h1>
@@ -193,7 +193,7 @@
                 viewBox="0 0 24 24"
                 stroke-width="1.5"
                 stroke="currentColor"
-                class="text-white border rounded-full bg-primary_color ms-3 p-2 size-8"
+                class="text-white rounded-full bg-primary_color ms-3 p-2 size-8"
               >
                 <path
                   stroke-linecap="round"
@@ -208,8 +208,111 @@
       <!-- header section end   -->
     </header>
     <main>
-      <!-- what we design  -->
-      <section class="container mx-auto my-24"></section>
+      <!-- About Us  -->
+      <!-- <section class="container mx-auto my-24"> -->
+      <!-- <div class="grid grid-cols-2 grid-rows-2 gap-9"> -->
+      <!-- about us content  -->
+      <!-- <div class="space-y-6 h-full">
+            <div class="bg-white inline px-4 py-3 rounded-3xl space-x-1">
+              <i class="fa-solid fa-arrow-right"></i>
+              <h4 class="inline text-base font-bold">About Us</h4>
+            </div>
+            <h2 class="text-4xl font-bold text-black">
+              We design thoughtful,<br />liveable spaces
+            </h2>
+            <p class="text-base font-medium text-lite_opacity_color">
+              The barn house captivates with its blend of rustic charm and
+              modern sophistication, featuring weathered wood, sleek metal
+              accents.
+            </p>
+            <div class="flex items-center gap-x-6 p-6 bg-white rounded-2xl">
+              <figure>
+                <img class="w-full" src="./assets/commercial.png" alt="" />
+              </figure>
+              <div>
+                <h4 class="text-xl font-extrabold">Commercial</h4>
+                <p class="text-base font-medium text-lite_opacity_color">
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+              </div>
+            </div>
+            <div class="flex items-center gap-x-6 p-6 bg-white rounded-2xl">
+              <figure>
+                <img src="./assets/residential.png" alt="" />
+              </figure>
+              <div>
+                <h4 class="text-xl font-extrabold">Residential</h4>
+                <p class="text-base font-medium text-lite_opacity_color">
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+              </div>
+            </div>
+          </div> -->
+      <!-- about us image  -->
+      <!-- <div>
+            <figure class="border-2 border-dashed w-[573px]">
+              <img class="w-full" src="./assets/Rectangle.png" alt="" />
+            </figure>
+          </div> -->
+      <!-- </div> -->
+      <!-- </section> -->
+
+      <section class="container mx-auto my-24">
+        <div class="card lg:card-side">
+          <div class="card-body md:w-1/2">
+            <div class="space-y-6">
+              <div class="flex justify-center md:justify-start">
+                <div class="bg-white inline px-4 py-3 rounded-3xl space-x-1">
+                  <i class="fa-solid fa-arrow-right"></i>
+                  <h4 class="inline text-base font-bold">About Us</h4>
+                </div>
+              </div>
+              <h2
+                class="text-2xl md:text-4xl font-bold text-black text-center md:text-start"
+              >
+                We design thoughtful,<br />liveable spaces
+              </h2>
+              <p
+                class="text-base font-medium text-lite_opacity_color text-center md:text-start"
+              >
+                The barn house captivates with its blend of rustic charm and
+                modern sophistication, featuring weathered wood, sleek metal
+                accents.
+              </p>
+              <div class="flex items-center gap-x-6 p-6 bg-white rounded-2xl">
+                <figure>
+                  <img class="w-full" src="./assets/commercial.png" alt="" />
+                </figure>
+                <div>
+                  <h4 class="text-xl font-extrabold">Commercial</h4>
+                  <p class="text-base font-medium text-lite_opacity_color">
+                    The barn house captivates with its blend of rustic charm and
+                    modern.
+                  </p>
+                </div>
+              </div>
+              <div class="flex items-center gap-x-6 p-6 bg-white rounded-2xl">
+                <figure>
+                  <img src="./assets/residential.png" alt="" />
+                </figure>
+                <div>
+                  <h4 class="text-xl font-extrabold">Residential</h4>
+                  <p class="text-base font-medium text-lite_opacity_color">
+                    The barn house captivates with its blend of rustic charm and
+                    modern.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <figure class="border-2 border-dashed">
+            <img src="./assets/Rectangle.png" alt="Album" />
+          </figure>
+        </div>
+      </section>
+
       <!-- design count  -->
       <section
         class="container mx-auto bg-white p-8 grid grid-cols-1 md:grid-cols-4 gap-x-6 rounded-3xl"
