vector image add on about section

--- a/index.html
+++ b/index.html
@@ -203,6 +203,16 @@
               </svg>
             </span>
           </button>
+          <!-- <div class="flex"> 
+          <div
+            class="bg-primary_color bg-opacity-50 inline px-5 py-4 rounded-3xl space-x-2 flex fle"
+          >
+            <h4 class="inline text-base font-bold">View Details</h4>
+            <i
+              class="fa-solid fa-arrow-right text-white p-2 bg-primary_color rounded-full -rotate-45"
+            ></i>
+          </div>
+          </div> -->
         </div>
       </section>
       <!-- header section end   -->
@@ -260,6 +270,9 @@
       <!-- </section> -->
 
       <section class="container mx-auto my-24">
+        <figure>
+          <img class="hidden md:block" src="./assets/Vector.png" alt="" />
+        </figure>
         <div class="card lg:card-side">
           <div class="card-body md:w-1/2">
             <div class="space-y-6">
