work process complete

--- a/index.html
+++ b/index.html
@@ -367,6 +367,66 @@
           </p>
         </div>
       </section>
+      <!-- work section  -->
+      <section class="container mx-auto my-24 space-y-6">
+        <div class="flex justify-center">
+          <div class="bg-white inline px-4 py-3 rounded-3xl space-x-1">
+            <i class="fa-solid fa-arrow-right"></i>
+            <h4 class="inline text-base font-bold">How we works</h4>
+          </div>
+        </div>
+        <h2 class="text-2xl md:text-4xl font-bold text-black text-center">
+          Our Works Process
+        </h2>
+        <p
+          class="text-base font-medium text-lite_opacity_color text-center md:w-3/6 mx-auto"
+        >
+          The barn house captivates with its blend of rustic charm and modern
+          sophistication, featuring weathered wood, sleek metal accents.
+        </p>
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
+          <div class="p-6 bg-[#E7C1D3] rounded-2xl space-y-3">
+            <figure>
+              <img src="./assets/concept.png" alt="" />
+            </figure>
+            <h4 class="text-black font-extrabold text-xl">Concept</h4>
+            <p class="text-lite_opacity_color text-base">
+              The barn house captivates with its blend of rustic charm and
+              modern.
+            </p>
+          </div>
+          <div class="p-6 bg-[#EFDA6E] rounded-2xl space-y-3">
+            <figure>
+              <img src="./assets/flow-chart.png" alt="" />
+            </figure>
+            <h4 class="text-black font-extrabold text-xl">Design Process</h4>
+            <p class="text-lite_opacity_color text-base">
+              The barn house captivates with its blend of rustic charm and
+              modern.
+            </p>
+          </div>
+          <div class="p-6 bg-[#A4DAC3] rounded-2xl space-y-3">
+            <figure>
+              <img src="./assets/vision.png" alt="" />
+            </figure>
+            <h4 class="text-black font-extrabold text-xl">Supervision</h4>
+            <p class="text-lite_opacity_color text-base">
+              The barn house captivates with its blend of rustic charm and
+              modern.
+            </p>
+          </div>
+          <div class="p-6 bg-[#77AAEA] rounded-2xl space-y-3">
+            <figure>
+              <img src="./assets/budget-planning.png" alt="" />
+            </figure>
+            <h4 class="text-black font-extrabold text-xl">Budget Planning</h4>
+            <p class="text-lite_opacity_color text-base">
+              The barn house captivates with its blend of rustic charm and
+              modern.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
