--- a/index.html
+++ b/index.html
@@ -427,6 +427,118 @@
           </div>
         </div>
       </section>
+      <!-- Portfolio section start  -->
+      <section class="p-8 bg-white">
+        <div class="space-y-6 container mx-auto">
+          <div class="flex justify-center">
+            <div
+              class="bg-primary_color bg-opacity-50 inline px-4 py-3 rounded-3xl space-x-1"
+            >
+              <i class="fa-solid fa-arrow-right"></i>
+              <h4 class="inline text-base font-bold">
+                Explore our Latest works
+              </h4>
+            </div>
+          </div>
+          <h2 class="text-2xl md:text-4xl font-bold text-black text-center">
+            Our Latest Portfolio
+          </h2>
+          <p
+            class="text-base font-medium text-lite_opacity_color text-center md:w-3/6 mx-auto"
+          >
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents.
+          </p>
+          <!-- Portfolio layout  -->
+          <div class="grid grid-cols-5 gap-6">
+            <!-- layout 01  -->
+            <div class="card card-side bg-base-100 border-2 col-span-3">
+              <figure class="p-4">
+                <img
+                  class="border-2 border-dashed"
+                  src="./assets/img1.png"
+                  alt=""
+                />
+              </figure>
+              <div class="card-body">
+                <h2 class="text-2xl font-extrabold">Commercial</h2>
+                <p class="text-base">
+                  The barn house captivates with its blend of rustic charm and
+                  modern. The barn house captivates with its blend of rustic
+                  charm and modern .
+                </p>
+                <div class="space-x-1">
+                  <h5 class="inline text-2xl text-black font-bold">
+                    View Details
+                  </h5>
+                  <i
+                    class="fa-solid fa-arrow-right p-2 bg-primary_color rounded-full -rotate-45"
+                  ></i>
+                </div>
+              </div>
+            </div>
+
+            <!-- layout 02   -->
+            <div class="card border-2 col-span-2">
+              <figure class="p-6">
+                <img
+                  src="./assets/img2.png"
+                  alt="Shoes"
+                  class="rounded-xl border-2 border-dashed"
+                />
+              </figure>
+            </div>
+
+            <!-- layout 03  -->
+            <div class="card border-2">
+              <figure class="p-6">
+                <img
+                  src="./assets/img2.png"
+                  alt="Shoes"
+                  class="rounded-xl border-2 border-dashed"
+                />
+              </figure>
+            </div>
+            <!-- layout 04  -->
+            <div class="card card-side bg-base-100 border-2 col-span-3">
+              <figure class="p-4">
+                <img
+                  class="border-2 border-dashed"
+                  src="./assets/img1.png"
+                  alt=""
+                />
+              </figure>
+              <div class="card-body">
+                <h2 class="text-2xl font-extrabold">Commercial</h2>
+                <p class="text-base">
+                  The barn house captivates with its blend of rustic charm and
+                  modern. The barn house captivates with its blend of rustic
+                  charm and modern .
+                </p>
+                <div class="space-x-1">
+                  <h5 class="inline text-2xl text-black font-bold">
+                    View Details
+                  </h5>
+                  <i
+                    class="fa-solid fa-arrow-right p-2 bg-primary_color rounded-full -rotate-45"
+                  ></i>
+                </div>
+              </div>
+            </div>
+            <!-- layout 05 -->
+            <div class="card border-2">
+              <figure class="p-6">
+                <img
+                  src="./assets/img2.png"
+                  alt="Shoes"
+                  class="rounded-xl border-2 border-dashed"
+                />
+              </figure>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Portfolio section end  -->
     </main>
     <footer></footer>
   </body>
