--- a/index.html
+++ b/index.html
@@ -539,6 +539,80 @@
         </div>
       </section>
       <!-- Portfolio section end  -->
+      <!-- article start  -->
+      <section class="container mx-auto my-24 space-y-6">
+        <div class="flex justify-center">
+          <div
+            class="bg-primary_color bg-opacity-50 inline px-4 py-3 rounded-3xl space-x-1"
+          >
+            <i class="fa-solid fa-arrow-right"></i>
+            <h4 class="inline text-base font-bold">Explore our Latest works</h4>
+          </div>
+        </div>
+        <h2 class="text-2xl md:text-4xl font-bold text-black text-center">
+          Our Latest Portfolio
+        </h2>
+        <p
+          class="text-base font-medium text-lite_opacity_color text-center md:w-3/6 mx-auto"
+        >
+          The barn house captivates with its blend of rustic charm and modern
+          sophistication, featuring weathered wood, sleek metal accents.
+        </p>
+        <div class="grid grid-cols-1 md:grid-cols-3 flex justify-between">
+          <!-- article 01  -->
+          <div class="card bg-base-100 w-96 shadow-xl">
+            <figure class="px-10 pt-10">
+              <img
+                src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                alt="Shoes"
+                class="rounded-xl"
+              />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Shoes!</h2>
+              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <div class="card-actions">
+                <button class="btn btn-primary">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <!-- article 02  -->
+          <div class="card bg-base-100 w-96 shadow-xl">
+            <figure class="px-10 pt-10">
+              <img
+                src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                alt="Shoes"
+                class="rounded-xl"
+              />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Shoes!</h2>
+              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <div class="card-actions">
+                <button class="btn btn-primary">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <!-- article 03  -->
+          <div class="card bg-base-100 w-96 shadow-xl">
+            <figure class="px-10 pt-10">
+              <img
+                src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                alt="Shoes"
+                class="rounded-xl"
+              />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Shoes!</h2>
+              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <div class="card-actions">
+                <button class="btn btn-primary">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- article end  -->
     </main>
     <footer></footer>
   </body>
