--- a/index.html
+++ b/index.html
@@ -546,11 +546,11 @@
             class="bg-primary_color bg-opacity-50 inline px-4 py-3 rounded-3xl space-x-1"
           >
             <i class="fa-solid fa-arrow-right"></i>
-            <h4 class="inline text-base font-bold">Explore our Latest works</h4>
+            <h4 class="inline text-base font-bold">Aura News</h4>
           </div>
         </div>
         <h2 class="text-2xl md:text-4xl font-bold text-black text-center">
-          Our Latest Portfolio
+          Read Our Articles and News
         </h2>
         <p
           class="text-base font-medium text-lite_opacity_color text-center md:w-3/6 mx-auto"
@@ -558,55 +558,151 @@
           The barn house captivates with its blend of rustic charm and modern
           sophistication, featuring weathered wood, sleek metal accents.
         </p>
-        <div class="grid grid-cols-1 md:grid-cols-3 flex justify-between">
+        <!-- <div class="grid grid-cols-1 md:grid-cols-3 flex justify-between"> -->
+        <!-- article 01  -->
+        <!-- <div class="card bg-base-100 w-96 shadow-xl">
+            <figure class="px-10 pt-10">
+              <img
+                src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                alt="Shoes"
+                class="rounded-xl"
+              />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Shoes!</h2>
+              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <div class="card-actions">
+                <button class="btn btn-primary">Buy Now</button>
+              </div>
+            </div>
+          </div> -->
+        <!-- article 02  -->
+        <!-- <div class="card bg-base-100 w-96 shadow-xl">
+            <figure class="px-10 pt-10">
+              <img
+                src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                alt="Shoes"
+                class="rounded-xl"
+              />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Shoes!</h2>
+              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <div class="card-actions">
+                <button class="btn btn-primary">Buy Now</button>
+              </div>
+            </div>
+          </div> -->
+        <!-- article 03  -->
+        <!-- <div class="card bg-base-100 w-96 shadow-xl">
+            <figure class="px-10 pt-10">
+              <img
+                src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                alt="Shoes"
+                class="rounded-xl"
+              />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Shoes!</h2>
+              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <div class="card-actions">
+                <button class="btn btn-primary">Buy Now</button>
+              </div>
+            </div>
+          </div> -->
+        <!-- </div> -->
+        <!-- <div class="flex justify-between gap-x-6"> -->
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-x-6">
           <!-- article 01  -->
-          <div class="card bg-base-100 w-96 shadow-xl">
-            <figure class="px-10 pt-10">
-              <img
-                src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-                alt="Shoes"
-                class="rounded-xl"
-              />
+          <div class="p-6 bg-base-100 rounded-2xl space-y-4">
+            <figure class="border-2 border-dashed">
+              <img class="w-full" src="./assets/article1.png" alt="" />
             </figure>
-            <div class="card-body items-center text-center">
-              <h2 class="card-title">Shoes!</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
-              <div class="card-actions">
-                <button class="btn btn-primary">Buy Now</button>
+            <div class="flex justify-between">
+              <div class="space-x-2">
+                <i class="fa-regular fa-calendar-days"></i>
+                <p class="inline font-sm font-medium">July 14, 2024</p>
+              </div>
+              <div class="space-x-2">
+                <i class="fa-regular fa-user p-1 border-2 rounded-full"></i>
+                <p class="inline font-sm font-medium">By Admin</p>
+              </div>
+            </div>
+            <div class="space-y-2">
+              <h2 class="text-xl md:text-2xl font-extrabold">
+                How to choose the furniture right of your home.
+              </h2>
+              <p class="text-base">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+              <div class="space-x-1">
+                <h5 class="inline text-2xl text-black font-bold">Read More</h5>
+                <i
+                  class="fa-solid fa-arrow-right p-2 bg-primary_color rounded-full -rotate-45"
+                ></i>
               </div>
             </div>
           </div>
-          <!-- article 02  -->
-          <div class="card bg-base-100 w-96 shadow-xl">
-            <figure class="px-10 pt-10">
-              <img
-                src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-                alt="Shoes"
-                class="rounded-xl"
-              />
+          <!-- article 02 -->
+          <div class="p-6 bg-base-100 rounded-2xl space-y-4">
+            <figure class="border-2 border-dashed">
+              <img class="w-full" src="./assets/article2.png" alt="" />
             </figure>
-            <div class="card-body items-center text-center">
-              <h2 class="card-title">Shoes!</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
-              <div class="card-actions">
-                <button class="btn btn-primary">Buy Now</button>
+            <div class="flex justify-between">
+              <div class="space-x-2">
+                <i class="fa-regular fa-calendar-days"></i>
+                <p class="inline font-sm font-medium">July 14, 2024</p>
+              </div>
+              <div class="space-x-2">
+                <i class="fa-regular fa-user p-1 border-2 rounded-full"></i>
+                <p class="inline font-sm font-medium">By Admin</p>
+              </div>
+            </div>
+            <div class="space-y-2">
+              <h2 class="text-xl md:text-2xl font-extrabold">
+                How to choose the furniture right of your home.
+              </h2>
+              <p class="text-base">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+              <div class="space-x-1">
+                <h5 class="inline text-2xl text-black font-bold">Read More</h5>
+                <i
+                  class="fa-solid fa-arrow-right p-2 bg-primary_color rounded-full -rotate-45"
+                ></i>
               </div>
             </div>
           </div>
-          <!-- article 03  -->
-          <div class="card bg-base-100 w-96 shadow-xl">
-            <figure class="px-10 pt-10">
-              <img
-                src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-                alt="Shoes"
-                class="rounded-xl"
-              />
+          <!-- article 03 -->
+          <div class="p-6 bg-base-100 rounded-2xl space-y-4">
+            <figure class="border-2 border-dashed">
+              <img class="w-full" src="./assets/article3.png" alt="" />
             </figure>
-            <div class="card-body items-center text-center">
-              <h2 class="card-title">Shoes!</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
-              <div class="card-actions">
-                <button class="btn btn-primary">Buy Now</button>
+            <div class="flex justify-between">
+              <div class="space-x-2">
+                <i class="fa-regular fa-calendar-days"></i>
+                <p class="inline font-sm font-medium">July 14, 2024</p>
+              </div>
+              <div class="space-x-2">
+                <i class="fa-regular fa-user p-1 border-2 rounded-full"></i>
+                <p class="inline font-sm font-medium">By Admin</p>
+              </div>
+            </div>
+            <div class="space-y-2">
+              <h2 class="text-xl md:text-2xl font-extrabold">
+                How to choose the furniture right of your home.
+              </h2>
+              <p class="text-base">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+              <div class="space-x-1">
+                <h5 class="inline text-2xl text-black font-bold">Read More</h5>
+                <i
+                  class="fa-solid fa-arrow-right p-2 bg-primary_color rounded-full -rotate-45"
+                ></i>
               </div>
             </div>
           </div>
