--- a/index.html
+++ b/index.html
@@ -709,6 +709,93 @@
         </div>
       </section>
       <!-- article end  -->
+      <!-- contact form start  -->
+      <section class="container mx-auto space-y-6">
+        <div class="space-y-6">
+          <div class="flex justify-center">
+            <div
+              class="bg-primary_color bg-opacity-50 inline px-4 py-3 rounded-3xl space-x-1"
+            >
+              <i class="fa-solid fa-arrow-right"></i>
+              <h4 class="inline text-base font-bold">Let’s Connect</h4>
+            </div>
+          </div>
+          <h2 class="text-2xl md:text-4xl font-bold text-black text-center">
+            Let’s Discuss Next Project
+          </h2>
+          <p
+            class="text-base font-medium text-lite_opacity_color text-center md:w-3/6 mx-auto"
+          >
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents.
+          </p>
+        </div>
+        <!-- input form  -->
+        <form class="grid grid-cols-1 md:grid-cols-4 gap-4 p-4 w-5/6 mx-auto">
+          <!-- First Name -->
+          <div class="col-span-1 md:col-span-2 ">
+            <input
+              type="text"
+              id="firstName"
+              class="input  w-full rounded-3xl rounded-3xl"
+              placeholder="First Name*"
+            />
+          </div>
+
+          <!-- Last Name -->
+          <div class="col-span-1 md:col-span-2">
+            <input
+              type="text"
+              id="lastName"
+              class="input  w-full rounded-3xl"
+              placeholder="Last Name*"
+            />
+          </div>
+
+          <!-- Phone -->
+          <div class="col-span-1 md:col-span-2">
+            <input
+              type="text"
+              id="phone"
+              class="input  w-full rounded-3xl"
+              placeholder="Phone Number*"
+            />
+          </div>
+
+          <!-- Email -->
+          <div class="col-span-1 md:col-span-2">
+            <input
+              type="email"
+              id="email"
+              class="input  w-full rounded-3xl"
+              placeholder="Email Number*"
+            />
+          </div>
+
+          <!-- Message -->
+          <div class="col-span-1 md:col-span-4 row-span-4">
+            <textarea
+              id="message"
+              class="textarea w-full rounded-3xl h-32 md:h-full"
+              placeholder="Write your message here"
+            ></textarea>
+          </div>
+          <!-- Submit Button -->
+          <div class="col-span-1 md:col-span-4">
+            <button
+              class="btn bg-primary_color w-full rounded-3xl text-xl font-extrabold"
+            >
+              Send Mail
+              <span
+                ><i
+                  class="fa-solid fa-arrow-right p-2 bg-black text-white rounded-full -rotate-45"
+                ></i
+              ></span>
+            </button>
+          </div>
+        </form>
+      </section>
+      <!-- contact form end -->
     </main>
     <footer></footer>
   </body>
