--- a/index.html
+++ b/index.html
@@ -710,8 +710,8 @@
       </section>
       <!-- article end  -->
       <!-- contact form start  -->
-      <section class="container mx-auto space-y-6">
-        <div class="space-y-6">
+      <section class="bg-[url('./assets/bg.jpg')] bg-no-repeat bg-cover py-24">
+        <div class="container mx-auto space-y-6">
           <div class="flex justify-center">
             <div
               class="bg-primary_color bg-opacity-50 inline px-4 py-3 rounded-3xl space-x-1"
@@ -733,11 +733,11 @@
         <!-- input form  -->
         <form class="grid grid-cols-1 md:grid-cols-4 gap-4 p-4 w-5/6 mx-auto">
           <!-- First Name -->
-          <div class="col-span-1 md:col-span-2 ">
+          <div class="col-span-1 md:col-span-2">
             <input
               type="text"
               id="firstName"
-              class="input  w-full rounded-3xl rounded-3xl"
+              class="input w-full rounded-3xl rounded-3xl"
               placeholder="First Name*"
             />
           </div>
@@ -747,7 +747,7 @@
             <input
               type="text"
               id="lastName"
-              class="input  w-full rounded-3xl"
+              class="input w-full rounded-3xl"
               placeholder="Last Name*"
             />
           </div>
@@ -757,7 +757,7 @@
             <input
               type="text"
               id="phone"
-              class="input  w-full rounded-3xl"
+              class="input w-full rounded-3xl"
               placeholder="Phone Number*"
             />
           </div>
@@ -767,7 +767,7 @@
             <input
               type="email"
               id="email"
-              class="input  w-full rounded-3xl"
+              class="input w-full rounded-3xl"
               placeholder="Email Number*"
             />
           </div>
@@ -797,6 +797,81 @@
       </section>
       <!-- contact form end -->
     </main>
-    <footer></footer>
+    <!-- footer start  -->
+    <footer class="footer footer-center bg-black text-primary-content p-10">
+      <div class="cursor-pointer flex items-center">
+        <div class="rounded-full bg-primary_color p-2">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-6 text-black"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"
+            />
+          </svg>
+        </div>
+        <!-- logo/title  -->
+        <h3 class="text-3xl font-extrabold ms-2 cursor-pointer">
+          Aura Interiors
+        </h3>
+      </div>
+      <p class="text-base text-lite_opacity_color font-bold">
+        The barn house captivates with its blend of rustic charm and modern
+        sophistication, featuring weathered wood, sleek metal accents.
+      </p>
+      <nav>
+        <div class="grid grid-flow-col gap-4">
+          <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-horizontal px-1 space-x-9">
+              <li
+                class="text-base cursor-pointer text-bold_opacity_color font-bold"
+              >
+                Home
+              </li>
+              <li class="text-base cursor-pointer text-bold_opacity_color">
+                Services
+              </li>
+              <li class="text-base cursor-pointer text-bold_opacity_color">
+                Portfolio
+              </li>
+              <li class="text-base cursor-pointer text-bold_opacity_color">
+                Blogs
+              </li>
+              <li class="text-base cursor-pointer text-bold_opacity_color">
+                Contact Us
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div
+        class="bg-primary_color flex items-center space-x-2 px-5 py-3 rounded-[32px] cursor-pointer"
+      >
+        <a class="text-black text-lg font-extrabold">Book Consult</a>
+        <div class="p-2 bg-black rounded-full">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-6 text-white"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"
+            />
+          </svg>
+        </div>
+      </div>
+    </footer>
+    <!-- footer end  -->
   </body>
 </html>
