--- a/index.html
+++ b/index.html
@@ -450,91 +450,83 @@
             sophistication, featuring weathered wood, sleek metal accents.
           </p>
           <!-- Portfolio layout  -->
-          <div class="grid grid-cols-5 gap-6">
-            <!-- layout 01  -->
-            <div class="card card-side bg-base-100 border-2 col-span-3">
-              <figure class="p-4">
-                <img
-                  class="border-2 border-dashed"
-                  src="./assets/img1.png"
-                  alt=""
-                />
-              </figure>
-              <div class="card-body">
-                <h2 class="text-2xl font-extrabold">Commercial</h2>
-                <p class="text-base">
-                  The barn house captivates with its blend of rustic charm and
-                  modern. The barn house captivates with its blend of rustic
-                  charm and modern .
-                </p>
-                <div class="space-x-1">
-                  <h5 class="inline text-2xl text-black font-bold">
-                    View Details
-                  </h5>
-                  <i
-                    class="fa-solid fa-arrow-right p-2 bg-primary_color rounded-full -rotate-45"
-                  ></i>
-                </div>
+          <div class="grid grid-cols-1 md:grid-cols-12 container mx-auto gap-6">
+          <!-- card 01  -->
+          <div class="flex flex-col md:flex-row items-center border-2 col-span-12 md:col-span-8 rounded-2xl">
+            <figure class="p-4">
+              <img
+                class="border-2 border-dashed w-full"
+                src="./assets/img1.png"
+                alt=""
+              />
+            </figure>
+            <div class="card-body md:w-2/3">
+              <h2 class="text-2xl font-extrabold">Commercial</h2>
+              <p class="text-base">
+                The barn house captivates with its blend of rustic charm and
+                modern. The barn house captivates with its blend of rustic charm
+                and modern .
+              </p>
+              <div class="space-x-1">
+                <h5 class="inline text-2xl text-black font-bold">
+                  View Details
+                </h5>
+                <i
+                  class="fa-solid fa-arrow-right p-2 bg-primary_color rounded-full -rotate-45"
+                ></i>
               </div>
             </div>
-
-            <!-- layout 02   -->
-            <div class="card border-2 col-span-2">
-              <figure class="p-6">
-                <img
-                  src="./assets/img2.png"
-                  alt="Shoes"
-                  class="rounded-xl border-2 border-dashed"
-                />
-              </figure>
-            </div>
-
-            <!-- layout 03  -->
-            <div class="card border-2">
-              <figure class="p-6">
-                <img
-                  src="./assets/img2.png"
-                  alt="Shoes"
-                  class="rounded-xl border-2 border-dashed"
-                />
-              </figure>
-            </div>
-            <!-- layout 04  -->
-            <div class="card card-side bg-base-100 border-2 col-span-3">
-              <figure class="p-4">
-                <img
-                  class="border-2 border-dashed"
-                  src="./assets/img1.png"
-                  alt=""
-                />
-              </figure>
-              <div class="card-body">
-                <h2 class="text-2xl font-extrabold">Commercial</h2>
-                <p class="text-base">
-                  The barn house captivates with its blend of rustic charm and
-                  modern. The barn house captivates with its blend of rustic
-                  charm and modern .
-                </p>
-                <div class="space-x-1">
-                  <h5 class="inline text-2xl text-black font-bold">
-                    View Details
-                  </h5>
-                  <i
-                    class="fa-solid fa-arrow-right p-2 bg-primary_color rounded-full -rotate-45"
-                  ></i>
-                </div>
+          </div>
+          <!-- card 02  -->
+          <div class="col-span-12 md:col-span-4 p-6 border-2 rounded-2xl">
+            <figure class="border-2 border-dashed">
+              <img class="w-full" src="./assets/img2.png" alt="" />
+            </figure>
+          </div>
+          <!-- card 03  -->
+          <div class="col-span-12 md:col-span-3 p-6 border-2 rounded-2xl">
+            <figure class="border-2 border-dashed">
+              <img class="w-full" src="./assets/img3.png" alt="" />
+            </figure>
+          </div>
+          <!-- card 04  -->
+          <div class="flex flex-col md:flex-row items-center border-2 col-span-12 md:col-span-6 rounded-2xl">
+            <figure class="p-4">
+              <img
+                class="border-2 border-dashed w-full"
+                src="./assets/img4.png"
+                alt=""
+              />
+            </figure>
+            <div class="card-body md:w-2/3">
+              <h2 class="text-2xl font-extrabold">Commercial</h2>
+              <p class="text-base">
+                The barn house captivates with its blend of rustic charm and
+                modern. The barn house captivates with its blend of rustic charm
+                and modern .
+              </p>
+              <div class="space-x-1">
+                <h5 class="inline text-2xl text-black font-bold">
+                  View Details
+                </h5>
+                <i
+                  class="fa-solid fa-arrow-right p-2 bg-primary_color rounded-full -rotate-45"
+                ></i>
               </div>
             </div>
-            <!-- layout 05 -->
-            <div class="card border-2">
-              <figure class="p-6">
-                <img
-                  src="./assets/img2.png"
-                  alt="Shoes"
-                  class="rounded-xl border-2 border-dashed"
-                />
-              </figure>
-            </div>
+          </div>
+          <!-- card 05  -->
+          <div class="col-span-12 md:col-span-3 p-6 border-2 rounded-2xl">
+            <figure class="border-2 border-dashed ">
+              <img class="w-full" src="./assets/img5.png" alt="" />
+            </figure>
+          </div>
+        </div>
+          <!-- card 06  -->
+          <div class="col-span-12 md:col-span-3 p-6 border-2 rounded-2xl md:hidden">
+            <figure class="border-2 border-dashed ">
+              <img class="w-full" src="./assets/img3.png" alt="" />
+            </figure>
           </div>
         </div>
       </section>
@@ -558,60 +550,7 @@
           The barn house captivates with its blend of rustic charm and modern
           sophistication, featuring weathered wood, sleek metal accents.
         </p>
-        <!-- <div class="grid grid-cols-1 md:grid-cols-3 flex justify-between"> -->
-        <!-- article 01  -->
-        <!-- <div class="card bg-base-100 w-96 shadow-xl">
-            <figure class="px-10 pt-10">
-              <img
-                src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-                alt="Shoes"
-                class="rounded-xl"
-              />
-            </figure>
-            <div class="card-body items-center text-center">
-              <h2 class="card-title">Shoes!</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
-              <div class="card-actions">
-                <button class="btn btn-primary">Buy Now</button>
-              </div>
-            </div>
-          </div> -->
-        <!-- article 02  -->
-        <!-- <div class="card bg-base-100 w-96 shadow-xl">
-            <figure class="px-10 pt-10">
-              <img
-                src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-                alt="Shoes"
-                class="rounded-xl"
-              />
-            </figure>
-            <div class="card-body items-center text-center">
-              <h2 class="card-title">Shoes!</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
-              <div class="card-actions">
-                <button class="btn btn-primary">Buy Now</button>
-              </div>
-            </div>
-          </div> -->
-        <!-- article 03  -->
-        <!-- <div class="card bg-base-100 w-96 shadow-xl">
-            <figure class="px-10 pt-10">
-              <img
-                src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-                alt="Shoes"
-                class="rounded-xl"
-              />
-            </figure>
-            <div class="card-body items-center text-center">
-              <h2 class="card-title">Shoes!</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
-              <div class="card-actions">
-                <button class="btn btn-primary">Buy Now</button>
-              </div>
-            </div>
-          </div> -->
-        <!-- </div> -->
-        <!-- <div class="flex justify-between gap-x-6"> -->
+        
         <div class="grid grid-cols-1 md:grid-cols-3 gap-x-6">
           <!-- article 01  -->
           <div class="p-6 bg-base-100 rounded-2xl space-y-4">
